# Psis

./: CMakeLists.txt  Makefile  README.md  cli-exe-par-1.c  client.c  cliente_jorge.c  data_server.c  front_server.c  ht.c  ht.h  kv.c  kv.h  list.c  list.h  psiskv.c  psiskv.h  server.c
final/: cli-exe-1.c  cli-exe-par-1.c  client.c  data_server.c  ht.c  ht.h
labs/: README.md
labs/lab1/: README.md
labs/lab1/rui/I/: exI.c
labs/lab1/rui/II/: ex2.c
labs/lab1/rui/III_IV/: pointers.c
labs/lab1/rui/V_VI/: prog2.c
labs/lab2/rui/: exI.c  exII.c  exV.c  exVI.c
labs/lab3/rui/: impar.c  lab3-1.c  lab3-2.c  lab3-3.c  lab3-4.c  par.c
labs/lab4/rui/: benchmark_fifo.c  benchmark_msgque.c  benchmark_sokets.c  lab4-1-impar.c  lab4-1-par.c  lab4-1.c  lab4-1.h  lab4-2-impar.c  lab4-2-par.c  lab4-2.c
labs/lab5/rui/: client-skel_1.c  client-skel_2.c  client-skel_3.c  client-skel_4.c  server-skel_1.c  server-skel_2.c  server-skel_3.c  server-skel_4.c  storyserver_1.h  storyserver_3.h  storyserver_4.h
labs/lab6/: client.c  kv.c  kv.h  server.c
project/: Makefile  data_server.c  psiskv.c  psiskv.h
