cmake_minimum_required(VERSION 2.8.12.2)
project(psisproject)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set (CMAKE_EXE_LINKER_FLAGS "-pthread")
add_executable(client client.c kv.c )
add_executable(server server.c list.c)
